# microservice-ocr

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.mk  docker-compose.yml  pyproject.toml  test.mk
src/: config.py  dependencies.py  main.py
src/dtos/: __init__.py  license_plate.py
src/errors/: __init__.py  auth_errors.py  exceptions.py  license_plate_errors.py  lp_detector_errors.py  ocr_errors.py
src/routers/: __init__.py  health.py  license_plate.py
src/services/: __init__.py  interfaces.py  license_plate_detector.py  ocr.py
src/validators/: __init__.py  license_plate.py
tests/unit/: test_accuracy.py  test_detector_service.py  test_ocr_service.py  test_validators.py
user-stories/: HU-001-.md  HU-002.md
